# sorcery

./: CLAUDE.md  README.md  design.md  pyproject.toml  requirements.txt
sorcery/: __init__.py  chat_chunks.py  commands.py  config.py  exceptions.py  game.py  history.py  input_output.py  llm.py  main.py  prompts.py  state.py
